# esc-rs

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.gdb  picocom.sh
.cargo/: config
src/: main.rs
