[package]
authors = ["sprhawk <465558+sprhawk@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "esc-rs"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

embedded-hal = "0.2.4"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
[dependencies.stm32f3xx-hal]
# version = "0.5.0"
git = "https://github.com/sprhawk/stm32f3xx-hal.git"
features = ["stm32f302x8"]

# this lets you use `cargo fix`!
[[bin]]
name = "esc-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
